--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,2 +1,6 @@
 FROM jenkins
 MAINTAINER Angelo Veltens <angelo.veltens@codecentric.de>
+
+USER root
+RUN apt update && apt install -y maven
+USER jenkins
